--- a/src/style.css
+++ b/src/style.css
@@ -2,13 +2,6 @@ body {
     font-family: "Hanken Grotesk", sans-serif;
 }
 
-.weather-app {
-    max-width: 600px;
-    margin: 30px auto;
-    padding: 30px;
-    border: 1px solid #d9d9d9;
-    border-radius: 10px;
-}
 
 h1 {
     color: #026ec5;
@@ -19,6 +12,11 @@ h1 {
     margin-bottom: 0;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+}
+
 li {
     list-style: none;
     margin: 0;
@@ -27,4 +25,40 @@ li {
     font-size: 15px;
     font-weight: 100;
     line-height: 19px;
+}
+
+.weather-app-wrapper {
+    max-width: 600px;
+    margin: 30px auto;
+}
+
+.weather-app {
+    max-width: 600px;
+    margin: 30px auto;
+    padding: 20px;
+    border: 1px solid #d9d9d9;
+    border-radius: 10px;
+}
+
+.weather-temperature img {
+    margin-top: -14px;
+    height: 75px;
+}
+
+.weather-temperature strong {
+    color: #026ec5;
+    font-size: 50px;
+    line-height: 1;
+    font-weight: 250;
+}
+
+.weather-temperature .units {
+    position: relative;
+    font-size: 16px;
+    color: #1278cc;
+    top: -30px;
+}
+
+.measures {
+    margin: 20px 0;
 }
