--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,10 @@ li {
     line-height: 19px;
 }
 
+li:first-letter {
+    text-transform: capitalize;
+}
+
 .weather-app-wrapper {
     max-width: 600px;
     margin: 30px auto;
@@ -42,7 +46,7 @@ li {
 
 .weather-temperature img {
     margin-top: -14px;
-    height: 75px;
+    height: 80px;
 }
 
 .weather-temperature strong {
