Added the forecast HTML and CSS

--- a/src/style.css
+++ b/src/style.css
@@ -71,3 +71,29 @@ li:first-letter {
 #celsius-link {
     text-decoration: none;
 }
+
+.weather-forecast {
+    margin-top: 3px;
+    padding: 3px;
+    border: 1px solid #d9d9d9;
+    border-radius: 10px;
+    color: #026ec5;
+}
+
+.forecast-icon {
+    margin-left: 110px;
+}
+
+.weather-forecast-date {
+    font-size: 17px;
+   font-weight: 700;
+}
+
+.weather-forecast-temperatures {
+    margin-left: 20px;
+    font-size: 17px;
+}
+
+.weather-forecast-temperature-min {
+    opacity: 0.6;
+}
